[package]
name = "pwm"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "timer-pwm"
path = "src/main.rs"
test = false
bench = false


[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"

[profile.dev]
opt-level = 's'
codegen-units = 1

[profile.release]
opt-level = 'z'
lto = true
